test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/postfix_if.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  if
  (
  identifier(a)
  --
  )
  return
  const int(0)
  ;
  else
  if
  (
  identifier(a)
  --
  )
  return
  const int(1)
  ;
  return
  const int(0)
  ;
  }
