test/tests/stages/6_statements_and_conditional_expressions/invalid_semantics/extra_credit/undeclared_var_in_labeled_statement.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(lbl)
  :
  return
  identifier(a)
  ;
  return
  const int(0)
  ;
  }
